# oz-viewer

./: .copier-answers.yml  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
scripts/: theme_picker.py
src/oz_viewer/: __init__.py  _cli.py  _display.py  _download.py  _perf.py  _ping.py
src/oz_viewer/data/: __init__.py  _blobs.py
src/oz_viewer/theme/: __init__.py  _convert.py  _defaults.py  _model.py  _qss_fixes.py  _registry.py
src/oz_viewer/viewer/: __init__.py  _orthoviewer.py  _utils.py  _viewer.py  _widgets.py
tests/: conftest.py  test_cli.py  test_oz_viewer.py
